# ss23-talk-a-palooza

./: .gitignore  README.md  blog.md  summary.md
app/: README.md
app/client/: .gitignore  App.js  README.md  app.json  package-lock.json  package.json  styles.css  tailwind.config.js
app/client/components/: InitialAssessment.jsx  Login.jsx  LoginForm.jsx  MainMenu.jsx  TestConnect.js
app/client/db/: assessmentWordList.js  wordBank.js
app/client/pages/: Dashboard.jsx  Exercises.jsx  InitialAssessment.jsx  Main.jsx  Reward.jsx  StartScreen.jsx
app/client/public/: index.html
app/client/screens/: Dashboard.jsx  DashboardScreen.jsx  ExerciseScreen.jsx  InitialAssessment.jsx  Loader.jsx  Main.jsx  StartScreen.jsx
app/client/services/: AssessWrapper.jsx  AuthWrapper.jsx  RenderRoutes.jsx  audioService.js  childrenService.js  recordingService.js  samplesService.js  vocabLogsService.js  wordBankService.js
app/client/src/: App.js  TestConnect.js  index.js
app/client/web/: index.html
app/documentation/: systemDesign.md
app/fastapi/: README.md  main.py  requirements.txt
app/fastapi/dl_api/: README.md  main.py  requirements.txt
app/fastapi/ds_api/: .gitignore  Makefile  README.md  config.toml  pyproject.toml  test_main.http
app/fastapi/ds_api/soniaapi/: README.md  checkdat.csv  itemsim.parquet  mainy.py  output1.json  requirements.txt  testy.http
app/fastapi/ds_api/src/ss23_talk_a_palooza/: __main__.py
app/fastapi/ds_api/src/ss23_talk_a_palooza/model_files/data-info/: lightgcn_user_consumed.pkl
app/fastapi/ds_api/src/ss23_talk_a_palooza/model_files/weights/: lightgcn_default_recs.npz
app/fastapi/ds_api/ticianeapi/: Dockerfile  README.md  test_main.http  words_by_category.ipynb
app/fastapi/ds_api/ticianeapi/src/ss23_talk_a_palooza/: __main__.py
app/fastapi/ds_api/ticianeapi/src/ss23_talk_a_palooza/model_files/: words.parquet
app/fastapi/helpers/: mongo_utils.py
app/fastapi/routers/: audio.py  recommender.py
app/server/: .gitignore  app.js  index.js  package-lock.json  package.json
app/server/config/: google.js  passport.js
app/server/controllers/: auth.js  children.js  recordings.js  samples.js  users.js  vocabLogs.js  wordBanks.js  wordbank.js
app/server/models/: child.js  recording.js  sample.js  user.js  vocabLog.js  wordBank.js
app/server/passport/: google.js  local.js  passport.js
app/server/requests/: create_new_childVocaby.rest  create_new_sample.rest  creating_new_child.rest  creating_new_user.rest  getRecommendations.rest  save_recording.rest
app/server/routes/: auth.js
app/server/utils/: config.js  middleware.js
dl/: requirements.txt
dl/notebooks/: 01_data_exploration.ipynb  01_data_preparation.ipynb  02_data_preparation.ipynb  03_a_data_loading_trials_2.ipynb  04_data_conversion.ipynb  05_model_loading.ipynb
documentation/deeplearning/: requirements.txt
documentation/uxdesign/: UX_Documentation.md  User Research  User-Research.md
documentation/webdevelopment/: git-guidelines.md  systemDesign.md
ds/: README.md  test_main.http
notebooks/ds/: wordbank_administration_data.parquet
sonia/notebooks/: Part 4B Evaluating the model.ipynb
soniaapi/: README.md  mainy.py  requirements.txt
(+103 files in other folders)
